--- a/en/messages_l_english.properties
+++ b/en/messages_l_english.properties
@@ -1,4 +1,4 @@
-﻿SLACKEN_TITLE코0=Recruitment Standards Slackened!
+SLACKEN_TITLE코0=Recruitment Standards Slackened!
 SLACKEN_SETUP코0=When we have slackened our recruitment standards!
 SLACKEN_HEADER코0=$MESSENGER$
 SLACKEN_1코0=Recruitment Standards Slackened!
@@ -712,7 +712,7 @@ IDEA_TITLE코0=Unlocked Idea
 IDEA_SETUP코0=When you have unlocked an idea.
 IDEA_HEADER코0=$MESSENGER$
 IDEA_1코0=$TYPE$ Advance!
-IDEA_2코1=We unlocked an idea in $TYPE$
+IDEA_2코0=$TITLE$, we unlocked an idea in group $TYPE$
 IDEA_3코0=$NAME$
 IDEA_4코0=$DESC$
 IDEA_5코0=BONUS EFFECT:
@@ -753,8 +753,8 @@ KNOWLEDGE_SHARING_4코0=decided
 KNOWLEDGE_SHARING_5코0=to $RESULT$ the offer of Knowledge Sharing from $WHO$.
 KNOWLEDGE_SHARING_6코0=$EFFECT$
 KNOWLEDGE_SHARING_LOG코0=$ACTOR$ is now granting $WHO$ Knowledge Sharing.
-KNOWLEDGE_SHARING_BTN1코1=OK
-KNOWLEDGE_SHARING_BTN2코1=OK
+KNOWLEDGE_SHARING_BTN1코0=Wonderous
+KNOWLEDGE_SHARING_BTN2코0=Wonderous
 KNOWLEDGE_SHARING_BTN3코0=Go to
 FLEETBASING_TITLE코0=Received Fleet basing Rights
 FLEETBASING_SETUP코0=When a nation grants fleet basing rights.
@@ -1808,7 +1808,6 @@ BANKLOAN_HEADER코0=Bank loan.
 BANKLOAN_1코0=We have taken a loan of
 BANKLOAN_2코0=§Y$VALUE$§!¤
 BANKLOAN_3코1=$INTEREST_MOD$$FIXED_INTEREST$
-BANKLOAN_4코0=$ESTATE_INFO$
 BANKLOAN_5코0=This can be done automatically when you run out of money.
 BANKLOAN_LOG코0=We have taken a loan.
 BANKLOAN_BTN1코0=OK
@@ -3278,7 +3277,7 @@ WEMILALLDISHONOUR_1코0=Military Alliance Dishonored.
 WEMILALLDISHONOUR_2코0=$MONARCHTITLE$, we have decided that the war declared by
 WEMILALLDISHONOUR_3코0=$ACTOR$
 WEMILALLDISHONOUR_4코0=is not really in our interest at this time
-WEMILALLDISHONOUR_6코1=We have taken great delight in telling them that they are on their own for this war.$FAITH$
+WEMILALLDISHONOUR_6코0=We have taken great delight in telling them that they are on their own for this war.
 WEMILALLDISHONOUR_LOG코0=We dishonored our Alliance with $ACTOR$.
 WEMILALLDISHONOUR_BTN1코0=OK
 WEMILALLDISHONOUR_BTN2코0=OK
@@ -3769,7 +3768,7 @@ OCCUPATIONOVER_TITLE코0=Province Occupied
 OCCUPATIONOVER_SETUP코0=When an unfortified province is occupied.
 OCCUPATIONOVER_HEADER코0=$MESSENGER$
 OCCUPATIONOVER_1코0=$WINNER$ occupied $PROV$
-OCCUPATIONOVER_2코0=$MONARCHTITLE$, $PROV$ has been occupied by
+OCCUPATIONOVER_2코0=$MONARCHTITLE$, $PROV$ has come under the occupation of
 OCCUPATIONOVER_3코0=$WINNER$.
 OCCUPATIONOVER_4코0=$WETHEY$ now control the province.
 OCCUPATIONOVER_LOG코0=$WINNER$ occupied $PROV$.
@@ -4384,7 +4383,7 @@ NEWMON_GOODDIP코0=$MONARCHNAME$'s great cunning and silver tongue shall aid us 
 NEWMON_GOODMIL코0=$MONARCHNAME$'s good leadership skills and superior tactical knowledge will help us vanquish those that dare stand against us.
 NEWMON_GOODADM코0=$MONARCHNAME$'s attention to detail and superior administrative skill will aid us in reforming our administration and maximizing our taxes.
 NEWMON_SUPERIOR코0=$MONARCHNAME$ is truly blessed.
-NEWMON_AVARAGE코0=[Root.Monarch.GetHerHisCap] tutors could not make a great [Root.Monarch.GetWomanMan] out of [Root.Monarch.GetHerHim] though we hope ruling our great nation will.
+NEWMON_AVARAGE코0={Root.Monarch.GetHerHisCap} tutors could not make a great {Root.Monarch.GetWomanMan} out of {Root.Monarch.GetHerHim} though we hope ruling our great nation will.
 NEWMON_TITLE코0=New Monarch
 NEWMON_SETUP코0=When you get a new Monarch.
 NEWMON_HEADER코0=A New $TITLE$!
@@ -5474,30 +5473,6 @@ DECDEMANDUNLAWFULTERRITORYWITHOTHER_LOG코0=$RECIPIENT$ refused demand for unlaw
 DECDEMANDUNLAWFULTERRITORYWITHOTHER_BTN1코0=OK
 DECDEMANDUNLAWFULTERRITORYWITHOTHER_BTN2코0=OK
 DECDEMANDUNLAWFULTERRITORYWITHOTHER_BTN3코0=Go to
-DECIMPERIALREALMWARWITHUS_TITLE코0=Emperor calls for Reichskrieg
-DECIMPERIALREALMWARWITHUS_SETUP코0=When the Emperor calls for Reichskrieg against the Empires enemies.
-DECIMPERIALREALMWARWITHUS_HEADER코0=Herald from
-DECIMPERIALREALMWARWITHUS_1코0=$ACTOR$
-DECIMPERIALREALMWARWITHUS_2코0=in their power as Emperor have declared
-DECIMPERIALREALMWARWITHUS_3코0=a Reichskrieg against us
-DECIMPERIALREALMWARWITHUS_4코0=and now have 5 years to prepare the war
-DECIMPERIALREALMWARWITHUS_LOG코0=$ACTOR$ have declares a Reichskrieg!
-DECIMPERIALREALMWARWITHUS_BTN1코0=OK
-DECIMPERIALREALMWARWITHUS_BTN2코0=OK
-DECIMPERIALREALMWARWITHUS_BTN3코0=Go to
-DECIMPERIALREALMWARWITHOTHER_TITLE코0=Emperor calls for Reichskrieg
-DECIMPERIALREALMWARWITHOTHER_SETUP코0=When the Emperor calls for Reichskrieg against the Empires enemies.
-DECIMPERIALREALMWARWITHOTHER_HEADER코0=Herald from
-DECIMPERIALREALMWARWITHOTHER_1코0=$ACTOR$
-DECIMPERIALREALMWARWITHOTHER_2코0=in their power as Emperor have declared
-DECIMPERIALREALMWARWITHOTHER_3코0=a Reichskrieg against $RECIPIENT$
-DECIMPERIALREALMWARWITHOTHER_4코0=and now have 5 years to prepare the war
-DECIMPERIALREALMWARWITHOTHER_5코0=
-DECIMPERIALREALMWARWITHOTHER_6코0=This surely will shake up Europe...
-DECIMPERIALREALMWARWITHOTHER_LOG코0=$ACTOR$ have declared a Reichskrieg against $RECIPIENT$!
-DECIMPERIALREALMWARWITHOTHER_BTN1코0=OK
-DECIMPERIALREALMWARWITHOTHER_BTN2코0=OK
-DECIMPERIALREALMWARWITHOTHER_BTN3코0=Go to
 PROVMODEXP_TITLE코0=Province Modifier Expired
 PROVMODEXP_SETUP코0=When a temporary Province Modifier expires.
 PROVMODEXP_HEADER코0=Province Modifier Expires
@@ -7005,47 +6980,3 @@ MINORITY_EXPULSION_CANCELED_LOG코1=The expulsion of minorities in $HOME_PROVINC
 MINORITY_EXPULSION_CANCELED_BTN1코0=Curses!
 MINORITY_EXPULSION_CANCELED_BTN2코0=Curses!
 MINORITY_EXPULSION_CANCELED_BTN3코0=Go to
-REVOLUTION_SPREAD_TITLE코0=Revolutionary Ideas Spread
-REVOLUTION_SPREAD_SETUP코0=When revolutionary ideas spread to our provinces.
-REVOLUTION_SPREAD_HEADER코0=$MESSENGER$
-REVOLUTION_SPREAD_1코0=Revolutionary Ideas Spread
-REVOLUTION_SPREAD_2코0=$MONARCHTITLE$, the Center of Revolution in
-REVOLUTION_SPREAD_3코0=$REVCENTER$
-REVOLUTION_SPREAD_4코0=has spread Revolutionary Ideas to some of our provinces:
-REVOLUTION_SPREAD_5코0=$DESC$
-REVOLUTION_SPREAD_6코0=$HINT$
-REVOLUTION_SPREAD_LOG코0=Revolutionary ideas have spread to our provinces.
-REVOLUTION_SPREAD_BTN2코0=Ok
-REVOLUTION_SPREAD_BTN3코0=Go to
-REVOLUTION_SPREAD_ZEAL_TITLE코0=Revolutionary Ideas Spread
-REVOLUTION_SPREAD_ZEAL_SETUP코0=When we spread revolutionary ideas to our ennemies.
-REVOLUTION_SPREAD_ZEAL_HEADER코0=$MESSENGER$
-REVOLUTION_SPREAD_ZEAL_1코0=Revolutionary Ideas Spread
-REVOLUTION_SPREAD_ZEAL_2코0=$MONARCHTITLE$, the Center of Revolution in
-REVOLUTION_SPREAD_ZEAL_3코0=$REVCENTER$
-REVOLUTION_SPREAD_ZEAL_4코0=has spread Revolutionary Ideas to ennemy provinces:
-REVOLUTION_SPREAD_ZEAL_5코0=$PROVINCES$
-REVOLUTION_SPREAD_ZEAL_6코0=We have have gained $ZEAL$ Revolutionary Zeal.
-REVOLUTION_SPREAD_ZEAL_LOG코0=Revolutionary ideas have spread to ennemy' provinces.
-REVOLUTION_SPREAD_ZEAL_BTN2코0=Ok
-REVOLUTION_SPREAD_ZEAL_BTN3코0=Go to
-WEGAINDOFTIER_TITLE코0=Rise to higher Defender of the Faith Tier
-WEGAINDOFTIER_SETUP코0=When we rise to a higher Defender of the Faith Tier.
-WEGAINDOFTIER_HEADER코0=$MESSENGER$
-WEGAINDOFTIER_1코0=Increased Influence in the $RELIGION$ Faith
-WEGAINDOFTIER_2코0=Other brethren joined under our banner for the True Faith. Our influence as the Defender of the Faith is significantly increased.
-WEGAINDOFTIER_3코0=$EFFECT$
-WEGAINDOFTIER_LOG코0=We rose to a higher Defender of the Faith Tier.
-WEGAINDOFTIER_BTN1코0=OK
-WEGAINDOFTIER_BTN2코0=OK
-WEGAINDOFTIER_BTN3코0=Go to
-WELOSEDOFTIER_TITLE코0=Dropped out of Defender of the Faith Tier
-WELOSEDOFTIER_SETUP코0=When we drop out of our current Defender of the Faith Tier.
-WELOSEDOFTIER_HEADER코0=$MESSENGER$
-WELOSEDOFTIER_1코0=Decline in influence in the $RELIGION$ Faith
-WELOSEDOFTIER_2코0=After losing the religious grip on one more country, our influence as Defender of the Faith is significantly reduced.
-WELOSEDOFTIER_3코0=$EFFECT$
-WELOSEDOFTIER_LOG코0=We dropped out of our current Defender of the Faith Tier.
-WELOSEDOFTIER_BTN1코0=OK
-WELOSEDOFTIER_BTN2코0=OK
-WELOSEDOFTIER_BTN3코0=Go to
