--- a/en/messages_l_english.properties
+++ b/en/messages_l_english.properties
@@ -2644,7 +2644,7 @@ VASALLACCEPT_2코0=$MONARCHTITLE$, $RECIPIENT$ has
 VASALLACCEPT_3코0=accepted
 VASALLACCEPT_4코0=the once in a lifetime opportunity to become our
 VASALLACCEPT_5코0=Vassals
-VASALLACCEPT_6코0=We now get half of their monthly tax incomes.
+VASALLACCEPT_6코1=We will now receive a portion of their tax incomes.
 VASALLACCEPT_LOG코0=$RECIPIENT$ are now our Vassals.
 VASALLACCEPT_BTN1코0=Great!
 VASALLACCEPT_BTN2코0=Great!
